--- a/INDEX.html
+++ b/INDEX.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
+<link rel="manifest" href="manifest-tech.json">
+<link rel="apple-touch-icon" href="icon-tech.png">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<meta name="theme-color" content="#1a1a1a">
+<meta name="mobile-web-app-capable" content="yes">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Inspection: Drone & FLIR v2</title>
